--- a/contato.html
+++ b/contato.html
@@ -20,11 +20,11 @@
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="index.html">
-            <img
+            <!-- <img
               src="https://bulma.io/images/bulma-logo.png"
               width="112"
               height="28"
-            />
+            /> -->
           </a>
         </div>
 
@@ -48,10 +48,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img
-                    src="https://bulma.io/images/placeholders/1280x960.png"
-                    alt="Placeholder image"
-                  />
+                  <img src="img/me6.png" alt="Placeholder image" />
                 </figure>
               </div>
               <div class="card-content">
