--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
           <a class="navbar-item" href="index.html">
-            <img
+            <!-- <img
               src="https://bulma.io/images/bulma-logo.png"
               width="112"
               height="28"
-            />
+            /> -->
           </a>
         </div>
 
@@ -48,10 +48,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img
-                    src="https://bulma.io/images/placeholders/1280x960.png"
-                    alt="Placeholder image"
-                  />
+                  <img src="img/me6.png" alt="Placeholder image" />
                 </figure>
               </div>
               <div class="card-content">
@@ -83,14 +80,10 @@
               </header>
               <div class="card-content">
                 <div class="content">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint
-                  corporis amet dicta nam, quidem nemo eligendi sapiente
-                  suscipit doloremque quod et nesciunt porro numquam aliquid
-                  dolorum. Earum ab officiis quam! Lorem ipsum dolor sit amet
-                  consectetur adipisicing elit. Quo temporibus architecto
-                  placeat dolore, autem perspiciatis? Non saepe harum culpa
-                  placeat ex exercitationem voluptatem dolores esse minus
-                  quisquam excepturi, doloribus libero.
+                  Developer at Stoom - Soluções em E-commerce e graduanda na
+                  FATEC Campinas <br />
+                  Member (mentor and part of the organization) of
+                  @DjangoGirlsCampinas and @PyLadiesCampinas
                 </div>
               </div>
             </div>
@@ -108,10 +101,7 @@
                   <div class="columns">
                     <div class="column">
                       <figure class="image is-128x128">
-                        <img
-                          class="is-rounded"
-                          src="https://bulma.io/images/placeholders/128x128.png"
-                        />
+                        <img class="is-rounded" src="img/stoom.png" />
                       </figure>
                     </div>
                     <div class="column is-9">
@@ -139,10 +129,7 @@
                   <div class="columns">
                     <div class="column">
                       <figure class="image is-128x128">
-                        <img
-                          class="is-rounded"
-                          src="https://bulma.io/images/placeholders/128x128.png"
-                        />
+                        <img class="is-rounded" src="img/assertiva.png" />
                       </figure>
                     </div>
                     <div class="column is-9">
