ajuste de imagens e descrições de texto

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="card">
               <div class="card-image">
                 <figure class="image is-4by3">
-                  <img src="img/me6.png" alt="Placeholder image" />
+                  <!-- <img src="img/me6.png" alt="Placeholder image" /> -->
                 </figure>
               </div>
               <div class="card-content">
@@ -106,22 +106,16 @@
                     </div>
                     <div class="column is-9">
                       <p class="title is-5">
-                        Python Full Stack Developer
+                        Full Stack Developer
                         <span class="tag is-dark"
                           >Stoom - Soluções em E-commerce</span
                         >
                       </p>
                       <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Nulla veritatis, dolorum perspiciatis illo
-                        perferendis placeat iusto est sequi. Nihil minima
-                        ducimus dolorum quisquam sequi blanditiis accusantium
-                        labore delectus ut numquam. Lorem ipsum dolor, sit amet
-                        consectetur adipisicing elit. Sit provident molestias
-                        deleniti expedita exercitationem sunt corporis facere
-                        dolorum voluptatem. Asperiores eligendi sequi suscipit
-                        ipsam doloremque deleniti accusantium, nostrum quod
-                        obcaecati.
+                        Trabalho no projeto Dashy (DashForSales), uma dashboard
+                        analytics e no e-commerce da rede de pet shop Petz, como
+                        desenvolvedora Front-End ReactJS e programadora Python
+                        no Back-End, além de elasticsearch.
                       </p>
                     </div>
                   </div>
@@ -140,16 +134,16 @@
                         >
                       </p>
                       <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Nulla veritatis, dolorum perspiciatis illo
-                        perferendis placeat iusto est sequi. Nihil minima
-                        ducimus dolorum quisquam sequi blanditiis accusantium
-                        labore delectus ut numquam. Lorem ipsum dolor, sit amet
-                        consectetur adipisicing elit. Sit provident molestias
-                        deleniti expedita exercitationem sunt corporis facere
-                        dolorum voluptatem. Asperiores eligendi sequi suscipit
-                        ipsam doloremque deleniti accusantium, nostrum quod
-                        obcaecati.
+                        Enquanto estive no squad de desenvolvimento, o time
+                        trabalhava com a metodologia ágil Scrum e sprints de 15
+                        dias, utilizei HTML, CSS, js, ReactJS, git e as
+                        seguintes plataformas: AWS, Trello, BitBucket, VScode,
+                        Movidesk. Também atuei no time de sustentação, onde é
+                        separado por níveis, indo de atendimento à
+                        desenvolvimento, já tendo passado pelo Nível 1, me
+                        encontro no Nível 2, utilizamos banco de dados SQL
+                        Server 2017, AWS, Movidesk, BitBucket, Eclipse, IntelliJ
+                        e Postman.
                       </p>
                     </div>
                   </div>
@@ -172,14 +166,9 @@
                       Análise e Desenvolvimento de Sistemas - FATEC Campinas
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                      Sint corporis amet dicta nam, quidem nemo eligendi
-                      sapiente suscipit doloremque quod et nesciunt porro
-                      numquam aliquid dolorum. Earum ab officiis quam! Lorem
-                      ipsum dolor sit amet consectetur adipisicing elit. Quo
-                      temporibus architecto placeat dolore, autem perspiciatis?
-                      Non saepe harum culpa placeat ex exercitationem voluptatem
-                      dolores esse minus quisquam excepturi, doloribus libero.
+                      Graduação <br />
+                      Cursando <br />
+                      2019 à 2022
                     </p>
                   </div>
                   <hr />
@@ -188,14 +177,10 @@
                       JavaScript Full Stack Developer - 8 Weeks
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                      Sint corporis amet dicta nam, quidem nemo eligendi
-                      sapiente suscipit doloremque quod et nesciunt porro
-                      numquam aliquid dolorum. Earum ab officiis quam! Lorem
-                      ipsum dolor sit amet consectetur adipisicing elit. Quo
-                      temporibus architecto placeat dolore, autem perspiciatis?
-                      Non saepe harum culpa placeat ex exercitationem voluptatem
-                      dolores esse minus quisquam excepturi, doloribus libero.
+                      No bootcamp está sendo abordado: HTML5, CSS, Bulma para
+                      criar sites responsivos, JavaScript + Lógica de
+                      programação, Git e Github, JavaScript moderno (ES6+),
+                      React, Express.js e Node.js.
                     </p>
                   </div>
                 </div>
