bug de repetição no back image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="column">
             <div class="card">
               <div class="card-image">
-                <figure class="image is-4by3">
+                <figure class="image principal is-4by3">
                   <!-- <img src="img/me6.png" alt="Placeholder image" /> -->
                 </figure>
               </div>
