--- a/contato.html
+++ b/contato.html
@@ -47,8 +47,8 @@
           <div class="column">
             <div class="card">
               <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="img/me6.png" alt="Placeholder image" />
+                <figure class="image principal is-4by3">
+                  <!-- <img src="img/me6.png" alt="Placeholder image" /> -->
                 </figure>
               </div>
               <div class="card-content">
