--- a/index.html
+++ b/index.html
@@ -186,6 +186,33 @@
                 </div>
               </div>
             </div>
+
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  Habilidades
+                </p>
+                <a href="#" class="card-header-icon" aria-label="more options">
+                </a>
+              </header>
+              <div class="card-content">
+                <div class="content">
+                  <div>
+                    <ul>
+                      <li>HTML5 e CSS3</li>
+                      <li>JavaScript</li>
+                      <li>React.js</li>
+                      <li>Scrum, Kanban</li>
+                      <li>Git, github, bitbuckt, gitkraken</li>
+                      <li>MySQL, SQL Server, SQL Server Management Studio</li>
+                      <li>Python, Django e Django REST</li>
+                      <li>ElasticSearch, Kibana</li>
+                      <li>Linux</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
