alteração nas habilidades e no texto sobre mim

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
               </header>
               <div class="card-content">
                 <div class="content">
-                  Developer at Stoom - Soluções em E-commerce e graduanda na
-                  FATEC Campinas <br />
-                  Member (mentor and part of the organization) of
-                  @DjangoGirlsCampinas and @PyLadiesCampinas
+                  Desenvolvedora na Stoom - Soluções em E-commerce e graduanda
+                  na FATEC Campinas <br />
+                  Mebro (mentora e parte da organização) das
+                  comunidades/iniciativas @DjangoGirlsCampinas and
+                  @PyLadiesCampinas
                 </div>
               </div>
             </div>
@@ -198,7 +199,7 @@
               <div class="card-content">
                 <div class="content">
                   <div>
-                    <ul>
+                    <ul style="list-style-type:none">
                       <li>HTML5 e CSS3</li>
                       <li>JavaScript</li>
                       <li>React.js</li>
