--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <div class="content">
                   <p>(19) 9 8137-8675</p>
                   <p>vyctoriak@gmail.com</p>
+                  <p>Campinas, SP</p>
                 </div>
               </div>
             </div>
