--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                       <li>JavaScript</li>
                       <li>React.js</li>
                       <li>Scrum, Kanban</li>
-                      <li>Git, github, bitbuckt, gitkraken</li>
+                      <li>Git, github, bitbucket, gitkraken</li>
                       <li>MySQL, SQL Server, SQL Server Management Studio</li>
                       <li>Python, Django e Django REST</li>
                       <li>ElasticSearch, Kibana</li>
