--- a/contato.html
+++ b/contato.html
@@ -18,15 +18,15 @@
   <body>
     <header>
       <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
+        <!-- <div class="navbar-brand">
           <a class="navbar-item" href="index.html">
-            <!-- <img
+            <img
               src="https://bulma.io/images/bulma-logo.png"
               width="112"
               height="28"
-            /> -->
+            />
           </a>
-        </div>
+        </div> -->
 
         <div id="navbarBasicExample" class="navbar-menu is-active">
           <div class="navbar-start">
