--- a/contato.html
+++ b/contato.html
@@ -100,7 +100,7 @@
                   </div>
 
                   <div class="field">
-                    <label class="label">Message</label>
+                    <label class="label">Mensagem</label>
                     <div class="control">
                       <textarea
                         class="textarea"
