--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="content">
                   Desenvolvedora na Stoom - Soluções em E-commerce e graduanda
                   na FATEC Campinas <br />
-                  Mebro (mentora e parte da organização) das
+                  Membro (mentora e parte da organização) das
                   comunidades/iniciativas @DjangoGirlsCampinas and
                   @PyLadiesCampinas
                 </div>
